tests/baselines/reference/parserUnaryExpression2.errors.txt
parserUnaryExpression2.ts(1,3): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.


==== parserUnaryExpression2.ts (1 errors) ====
    ++function(e) { }
      ~~~~~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.